--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "ws": "5.1.1"
   },
   "scripts": {
-    "test": "mocha --check-leaks --require esm './**/*.test.js'",
-    "start": "node ./bin/server.mjs",
+    "test": "mocha --check-leaks --require esm './**/*.test.mjs'",
+    "start": "node ./bin/server.mjs --domain=alan.local",
     "deploy": "node aws-deploy",
     "dev": "node bin/server.mjs --port 3000"
   }
